# ZaraOS

./: .gitignore  .replit  CHANGELOG.md  pnpm-lock.yaml  replit.md  update.sh
.agents/: agent_assets_metadata.toml
artifacts/zaraos/: README.md  index.html  package.json  vite.config.ts
artifacts/zaraos-web/: index.html  package.json
artifacts/zaraos-web/.replit-artifact/: artifact.toml
artifacts/zaraos-web/src/: App.tsx  index.css
artifacts/zaraos/.replit-artifact/: artifact.toml
artifacts/zaraos/docs/: AI_RUNTIME_ARCHITECTURE.md  AI_SECURITY_MODEL.md  ARCHITECTURE.md  COMMAND_CONFIRMATION_MODEL.md  CONNECTED_SERVICES_ROADMAP.md  GITHUB_EXPORT_GUIDE.md  LINUX_ISO_PREP.md  LOCAL_AI_ROADMAP.md  LOCAL_FIRST_AI.md  MEMORY_MODEL.md  PLUGIN_SPEC.md  REPLIT_INDEPENDENCE_AUDIT.md  ROADMAP.md  SECURE_STORAGE_MODEL.md  SECURITY.md  SECURITY_AUDIT_ALPHA_0_1.md  SKILLS_ARCHITECTURE.md  TAURI_READINESS_AUDIT_ALPHA_0_5.md  TAURI_ROADMAP.md  (+3 more)
artifacts/zaraos/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/zaraos/src-tauri/capabilities/: default.json
artifacts/zaraos/src-tauri/icons/: icon.icns
artifacts/zaraos/src-tauri/resources/: install.sh  lightdm.conf  zaraos-ollama.service  zaraos-openbox.desktop  zaraos-session.sh
artifacts/zaraos/src-tauri/resources/zaraos-plymouth/: zaraos.plymouth  zaraos.script
artifacts/zaraos/src-tauri/src/: lib.rs  main.rs
artifacts/zaraos/src-tauri/src/commands/: apps.rs  disks.rs  fs.rs  kv.rs  mod.rs  network.rs  power.rs  shell.rs  system.rs
attached_assets/: Pasted-Continue-ZaraOS-development-into-Alpha-0-5-IMPORTANT-Do_1778487700183.txt  Pasted-Continue-development-of-ZaraOS-Alpha-0-1-I-am-currently_1778475864184.txt  Pasted-Continue-development-of-ZaraOS-Alpha-IMPORTANT-Before-a_1778478535465.txt  Pasted-Continue-development-of-ZaraOS-IMPORTANT-We-are-now-ent_1778480227656.txt  Pasted-You-are-helping-me-build-the-first-prototype-of-a-proje_1778474363790.txt
logs/: README.txt
scripts/: build-iso.sh  generate-alpha02-report.mjs  generate-report.mjs  setup-linux.sh  upload-debug-log.sh
(+85 files in other folders)
