[package]
name = "zaraos"
version = "0.1.0"
description = "ZaraOS — AI-native desktop operating environment"
authors = ["ZaraOS Project"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# See https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zaraos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"

# webkit2gtk is Tauri's internal WebView backend on Linux.
# We declare it explicitly (no version-specific features) so we can
# connect the permission-request signal and auto-grant camera/mic access.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_20"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
